--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <html>
 <head>
-<title>Suzanne & Vladimir trouwen op 26 juni 2019</title>
+    <meta charset="utf-8"/>
+    <meta name="description" content="Suzanne & Vladimir trouwen op 26 juni 2019"/>
+    <meta name="robots" content="NOINDEX,NOFOLLOW"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <title>Suzanne & Vladimir trouwen op 26 juni 2019</title>
+    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
+    <style>
+        body, html {
+            height: 100%;
+            margin:0;
+            padding: 0;
+            font-family: 'Patrick Hand', cursive;
+        }
+
+        .bg {
+            background-image: url("background.jpg");
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            opacity: 29%;
+        }
+
+        .intro{
+            font-size: 26pt;
+            padding-top: 30px;
+        }
+        .intro span{
+            display: block;
+            padding-top: 5px;
+            text-align: center;
+         }
+        .extrapad {
+            padding-top:25px !important;
+        }
+    </style>
 </head>
 
 <body>
-<center>Suzanne & Vladimir trouwen op 26 juni 2019</center>
+<div class="bg">
+    <div class="intro">
+        <span>Suzanne van Geemen</span>
+        <span>&</span>
+        <span>Vladimir Kerkhoff</span>
+
+        <span class="extrapad">26 juni 2019</span>
+    </div>
+</div>
+
+<div class="content">
+    
+</div>
 </body>
 
 </html>
