--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <title>Suzanne & Vladimir trouwen op 26 juni 2019</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <style>
         body, html {
@@ -51,7 +52,7 @@
 </div>
 
 <div class="content">
-    
+
 </div>
 </body>
 
