Larger font for success

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             display: none;
             padding-top: 80px;
             text-align: center;
+            font-size: 26pt;
         }
     </style>
 </head>
