Set font for form fields

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <title>Suzanne & Vladimir trouwen op 26 juni 2019</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
@@ -62,6 +61,9 @@
             text-align: center;
             font-size: 26pt;
         }
+        input{
+            font-family: 'Verdana';
+        }
     </style>
 </head>
 
@@ -86,12 +88,12 @@
                     <fieldset>
                         <div class="pure-control-group">
                             <label for="naam">Naam:</label>
-                            <input id="naam" class="pure-input-1" type="text" placeholder="naam" required>
+                            <input id="naam" class="pure-input-1" type="text" placeholder="Naam" required>
                         </div>
 
                         <div class="pure-control-group">
                             <label for="email">E-mailadres:</label>
-                            <input id="email" class="pure-input-1" type="email" placeholder="Email Address" required>
+                            <input id="email" class="pure-input-1" type="email" placeholder="E-mailadres" required>
                         </div>
 
                         <div class="pure-control-group">
@@ -117,6 +119,7 @@
     </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
     function postToGoogle() {
         var name = $('#naam').val();
